site/content/en/v0.17/docs/tasks/run/kubeflow/xgboostjobs.md
---
title: "Run a XGBoostJob"
date: 2023-09-14
weight: 6
description: >
  Run a Kueue scheduled XGBoostJob
---

This page shows how to leverage Kueue's scheduling and resource management capabilities when running 
[Trainer](https://www.kubeflow.org/docs/components/training/xgboost/) XGBoostJobs.

This guide is for [batch users](/v0.17/docs/tasks#batch-user) that have a basic understanding of Kueue. For more information, see [Kueue's overview](/v0.17/docs/overview).

## Before you begin

Check [administer cluster quotas](/v0.17/docs/tasks/manage/administer_cluster_quotas) for details on the initial cluster setup.

Check [the Trainer installation guide](https://www.kubeflow.org/docs/components/training/installation/).

Note that the minimum requirement trainer version is v1.7.0.

You can [modify kueue configurations from installed releases](/v0.17/docs/installation#install-a-custom-configured-released-version) to include XGBoostJobs as an allowed workload.

{{% alert title="Note" color="primary" %}}
In order to use Trainer, prior to v0.8.1, you need to restart Kueue after the installation.
You can do it by running: `kubectl delete pods -l control-plane=controller-manager -n kueue-system`.
{{% /alert %}}

## XGBoostJob definition

### a. Queue selection

The target [local queue](/v0.17/docs/concepts/local_queue) should be specified in the `metadata.labels` section of the XGBoostJob configuration.

```yaml
metadata:
  labels:
    kueue.x-k8s.io/queue-name: user-queue
```

### b. Optionally set Suspend field in XGBoostJobs

```yaml
spec:
  runPolicy:
    suspend: true
```

By default, Kueue will set `suspend` to true via webhook and unsuspend it when the XGBoostJob is admitted.

## Sample XGBoostJob

This example is based on https://github.com/kubeflow/trainer/blob/afba76bc5a168cbcbc8685c7661f36e9b787afd1/examples/xgboost/xgboostjob.yaml.

{{< include "v0.17/examples/jobs/sample-xgboostjob.yaml" "yaml" >}}
